# Workspace-App

./: .gitignore  README.md  database.py  db.sqlite  main.py  make_admin.py  models.py  pyproject.toml  schemas.py  test.db
alembic/: env.py
alembic/versions/: 161ee5426717_added_a_model_for_password_reset_tokens_.py  2bc8a40522e5_refactor_folder_structure.py  f580cb831ff6_initial_v2_core_infrastructure.py  f96b90ffcbaf_initial_migration.py
app/: auth.py  config.py  database.py  dependencies.py  main.py  utility.py
app/admin/: admin_users.py
app/models/: __init__.py  association.py  tasks.py  users.py  workspaces.py
app/routers/: tasks.py  users.py  workspaces.py
app/schemas/: __init__.py  auth.py  tasks.py  users.py  workspaces.py
app/scripts/: make_admin.py  seed.py
app/utils/: __init__.py  email_utils.py  image_utils.py  queries.py
backend/: alembic.ini  populate_db.py  test_mail.py
backend/alembic/versions/: 0f68bdcde863_add_resources_and_conversations.py  16c6254deff1_add_folders_table_verification_tokens_.py  (+11 more)
backend/app/: bot_service.py  config.py  dependencies.py  main.py
backend/tests/: auth_helpers.py  conftest.py  test_auth_and_media.py  test_conversations.py  test_folders.py  test_resources.py  test_tasks.py  test_users.py  test_workspaces.py
frontend/: index.html
frontend/src/: App.css  App.jsx  AppShell.jsx  main.jsx
routers/: tasks.py  users.py  workspaces.py
static/: find.py
templates/: layout.html
templates/email/: password_reset.html
tests/: conftest.py  test_auth_and_media.py  test_tasks.py  test_users.py
(+79 files in other folders)
