[project]
name = "WorkspaceApp"
version = "0.1.0"
description = '''A collaborative platform where users can create workspaces dedicated to completing specific projects.
Users can create tasks, set deadlines, and track completion rate in a free environment with a loose hierarchy.
Meant for small projects like planning a trip, or larger projects involving multiple people.'''
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.2",
    "greenlet>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
]