[project]
name = "WorkspaceApp"
version = "0.1.0"
description = '''A collaborative platform where users can create workspaces dedicated to completing specific projects.
Users can create tasks, set deadlines, and track completion rate in a free environment with a loose hierarchy.
Meant for small projects like planning a trip, or larger projects involving multiple people.'''
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.30",
    "fastapi[standard]>=0.135.2",
    "filetype>=1.2.0",
    "greenlet>=3.3.2",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "moto>=5.2.2",
    "pytest>=9.0.3",
]
